--- a/package.json
+++ b/package.json
@@ -1,19 +1,40 @@
 {
-  "name": "mystorybook",
-  "private": true,
-  "version": "0.0.0",
+  "name": "oas-custom-components",
+  "private": false,
+  "version": "0.0.2-rc2",
   "type": "module",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "keywords": [
+    "dev",
+    "toy project"
+  ],
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com",
+    "type": "git"
+  },
+  "files": [
+    "dist/"
+  ],
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "scripts": {
     "dev": "npm run storybook",
-    "build": "tsc && vite build",
+    "build": "npm run clean && tsc && npm run copyfiles",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "build-storybook": "storybook build",
+    "clean": "rimraf dist/",
+    "copyfiles": "copyfiles -u 1 src/**/*.css dist/"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.0.10",
@@ -33,6 +54,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.6",
     "storybook": "^8.0.10",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
